# a-stock-agent

./: .env.example  .gitignore  A股短线CC方案.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  deploy.remote.example.env  holdings.yaml  pyproject.toml  risk_config.example.yaml  risk_state.example.yaml
.claude/: settings.local.json
code/: analyze_theme_loop.py  db.py  download_daily.py  init_db.sql  logger.py  notify.py  refresh_calendar.py  review.py  run_anomaly_loop.sh  run_intraday.sh  run_postmarket.sh  run_premarket.sh  run_tg_listener.sh  run_theme_loop.sh  run_watch_loop.sh  theme_emergence_loop.py
config/: jobs.yaml  jobs_loader.py
data/: concept_whitelist.yaml
docs/: allowed_schema.md  automations.md  card_validator_enforce_switch.md  codex_automations.md  im_gateway.md  同花顺条件单教程.md
launchd/: com.user.stockanomalyloop.plist  com.user.stockchannelgateway.plist  com.user.stockintraday.plist  com.user.stockmarketdynamic.plist  com.user.stocktglistener.plist  com.user.stockthemeloop.plist  com.user.stockwatchloop.plist  com.user.stockweekly.plist
logs/: weekly_loop.log.2026-05-17
scripts/: channel_listener.py  configure_feishu.py  configure_weixin.py  deploy_remote_codex.sh  disable_legacy_claude_launchd.sh  disable_legacy_llm_launchd.sh  doctor_codex_runtime.sh  install_automations.sh  install_codex_automations.sh  install_launchd.sh  install_runtime_services.sh  migrate_channels.py  migrate_tg_inbound.py  quickstart.sh  refresh_stock_basic.py  run_agent_job.sh  set_tg_commands.py  setup.sh  start_gateway.sh  start_tg_listener.sh  (+6 more)
(+178 files in other folders)
