[project]
name = "stock-codex"
version = "0.1.0"
description = "A股短线 Codex 辅助系统"
requires-python = ">=3.11,<3.13"
dependencies = [
    "akshare>=1.18",
    "pandas>=2.0",
    "requests>=2.31",
    "PyYAML>=6.0",
    "filelock>=3.13",
    "lark-oapi>=1.6.6",
    "websocket-client>=1.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["stock_codex"]

[project.scripts]
stock-ask-pack = "stock_codex.apps.stock_ask_pipeline:main"
stock-query-pack = "stock_codex.apps.stock_query_pipeline:main"
stock-tg-listener = "stock_codex.apps.tg_listener:main"
stock-channel-listener = "stock_codex.apps.channel_listener:main"
stock-weekly = "stock_codex.apps.weekly_loop:main"
stock-review = "stock_codex.tools.review:main"
stock-refresh-calendar = "stock_codex.tools.refresh_calendar:main"
stock-theme-loop = "stock_codex.apps.theme_emergence_loop:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
